<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:background="@drawable/shape"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="140dp"
            android:text="@string/app_name16"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold">

        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="vertical">

      <LinearLayout
          android:id="@+id/layout13"
          android:layout_width="200dp"
          android:layout_height="50dp"
          android:background="@drawable/shape_1"
          android:layout_marginTop="50dp"
          android:layout_gravity="center"
          android:layout_marginLeft="50dp"
          android:orientation="horizontal">
          <ImageView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:src="@drawable/ic_sharing"
              android:layout_gravity="center"
              android:layout_marginLeft="20dp">

          </ImageView>
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/app_name18"
              android:textColor="@color/black"
              android:textSize="20sp"
              android:layout_gravity="center"
              android:layout_marginLeft="10dp">

          </TextView>

      </LinearLayout>
        <LinearLayout
            android:id="@+id/layout14"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@drawable/shape_1"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_telegram"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp">

            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name19"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp">

            </TextView>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout15"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@drawable/shape_1"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_instagram"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp">

            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name20"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp">

            </TextView>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2">

        <include layout="@layout/activity_main_call_up">

        </include>
    </LinearLayout>
</LinearLayout>