<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name10"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.3">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/layout1"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="50dp"
                        android:background="@drawable/shape_1"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/img"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="50dp"
                            android:src="@drawable/ic_sun">

                        </ImageView>

                        <TextView
                            android:id="@+id/name"

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:layout_marginTop="-50dp"
                            android:text="@string/app_name3"
                            android:textColor="@color/black"
                            android:textSize="20sp">

                        </TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout3"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/shape_1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginBottom="50dp"
                            android:src="@drawable/ic_sleep">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="35dp"
                            android:layout_marginTop="-50dp"
                            android:text="@string/app_name5"
                            android:textColor="@color/black"
                            android:textSize="20sp">

                        </TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout5"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/shape_1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="40dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="60dp"
                            android:src="@drawable/ic_prayer">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:layout_marginTop="-50dp"
                            android:layout_marginRight="40dp"
                            android:text="@string/app_name7"
                            android:textColor="@color/black"
                            android:textSize="20sp">

                        </TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout7"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/shape_1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="60dp"
                            android:src="@drawable/ic_quran">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:layout_marginTop="-60dp"
                            android:layout_marginRight="40dp"
                            android:text="@string/app_name9"
                            android:textColor="@color/black"
                            android:textSize="20sp">

                        </TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout9"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/shape_1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="50dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="60dp"
                            android:src="@drawable/ic_aprayer">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:layout_marginTop="-50dp"
                            android:text="@string/app_name12"
                            android:textColor="@color/black"
                            android:textSize="20sp">

                        </TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout12"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/shape_1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="50dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="50dp"
                            android:src="@drawable/ic_kaaba">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="-45dp"
                            android:layout_marginRight="30dp"
                            android:text="@string/app_name14"
                            android:textColor="@color/black"
                            android:textSize="20sp">

                        </TextView>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/layout2"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="50dp"
                        android:background="@drawable/shape_1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginBottom="50dp"
                            android:src="@drawable/ic_night">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:layout_marginTop="-50dp"
                            android:text="@string/app_name4"
                            android:textColor="@color/black"
                            android:textSize="20sp">

                        </TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout4"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/shape_1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="25dp"
                            android:layout_marginBottom="50dp"
                            android:src="@drawable/ic_alarmclock">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="-50dp"
                            android:text="@string/app_name6"
                            android:textColor="@color/black"
                            android:textSize="20sp">

                        </TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout6"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/shape_1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="40dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="60dp"
                            android:src="@drawable/ic_prayer">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:layout_marginTop="-40dp"
                            android:text="@string/app_name8"
                            android:textColor="@color/black"
                            android:textSize="20sp">

                        </TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout8"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/shape_1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="50dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="60dp"
                            android:src="@drawable/ic_mosque">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:layout_marginTop="-50dp"
                            android:text="@string/app_name11"
                            android:textColor="@color/black"
                            android:textSize="20sp">

                        </TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout10"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/shape_1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="50dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="60dp"
                            android:src="@drawable/ic_aprayer">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:layout_marginTop="-50dp"
                            android:text="@string/app_name13"
                            android:textColor="@color/black"
                            android:textSize="20sp">

                        </TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout11"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/shape_1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="50dp"
                            android:layout_marginTop="30dp"
                            android:layout_marginBottom="50dp"
                            android:src="@drawable/ic_aprayer">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="-40dp"
                            android:text="@string/app_name15"
                            android:textColor="@color/black"
                            android:textSize="20sp">

                        </TextView>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


        </ScrollView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:layout_marginTop="-15dp"
        >

       <include layout="@layout/activity_main_call_up">

       </include>


    </LinearLayout>


</LinearLayout>